Dark mode fix : Signature was black on black

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -52,6 +52,9 @@
         --fg-link-color: #ff706b;
         --special-hover-color: #ffffff;
     }
+    #signature {
+        filter: invert(1);
+    }
 }
 
 
